force-app/main/default/objects/PBS_gBUILD_WorkflowHistory__c/PBS_gBUILD_WorkflowHistory__c.object-meta.xml
<CustomObject>
    <description>gBUILD Workflow History: Stores transitions from 1 state to another.</description>
    <label>gBUILD Workflow History</label>
    <nameField>
        <displayFormat>gbWh_{00000}</displayFormat>
        <label>PBSgBUILDWH</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>gBUILD Workflow History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>