force-app/main/default/objects/PBS_gBUILD_WorkflowHistory__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The action that prompted the state change.</description>
    <inlineHelpText>The action that prompted the state change.</inlineHelpText>
    <label>Action</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>