force-app/main/default/objects/PBS_gBUILD_WorkflowHistory__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments related to the state change.</description>
    <inlineHelpText>Comments related to the state change.</inlineHelpText>
    <label>Comments</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>