force-app/main/default/objects/PBS_gBUILD_WorkflowHistory__c/fields/FormApprovedForReporting__c.field-meta.xml
<CustomField>
    <fullName>FormApprovedForReporting__c</fullName>
    <label>Form Approved For Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>