force-app/main/default/objects/PBS_gBUILD_WorkflowHistory__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <description>The format the XML data is stored in.</description>
    <inlineHelpText>The format the XML data is stored in.</inlineHelpText>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rahd1.X</fullName>
            </value>
            <value>
                <fullName>Rahd2.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>