force-app/main/default/objects/PBS_gBUILD_WorkflowHistory__c/fields/ParentProjectBuilding__c.field-meta.xml
<CustomField>
    <fullName>ParentProjectBuilding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project Building</label>
    <referenceTo>PBS_gBUILD_ProjectBuilding__c</referenceTo>
    <relationshipLabel>gBUILD Workflow History</relationshipLabel>
    <relationshipName>gBUILD_Workflow_History</relationshipName>
    <type>Lookup</type>
</CustomField>