force-app/main/default/objects/PBS_gBUILD_WorkflowHistory__c/fields/ParentScopeSystem__c.field-meta.xml
<CustomField>
    <fullName>ParentScopeSystem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Scope System</label>
    <referenceTo>PBS_gBUILD_PBuildingScopeSystem__c</referenceTo>
    <relationshipLabel>gBUILD Workflow History</relationshipLabel>
    <relationshipName>gBUILD_Workflow_History</relationshipName>
    <type>Lookup</type>
</CustomField>