force-app/main/default/objects/PBS_gBUILD_WorkflowHistory__c/fields/ParentScopeSystemDetail__c.field-meta.xml
<CustomField>
    <fullName>ParentScopeSystemDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>gBUILD Scope System Detail</label>
    <referenceTo>PBS_gBUILD_PBuildingScopeSystemDetail__c</referenceTo>
    <relationshipLabel>gBUILD Workflow History</relationshipLabel>
    <relationshipName>gBUILD_Workflow_History</relationshipName>
    <type>Lookup</type>
</CustomField>