force-app/main/default/objects/PBS_gBUILD_WorkflowHistory__c/fields/Rahd_ProjectParentId__c.field-meta.xml
<CustomField>
    <fullName>Rahd_ProjectParentId__c</fullName>
    <description>This is the parent ID for this object&apos;s RAHD_Project</description>
    <inlineHelpText>This is the parent ID for this object&apos;s RAHD_Project</inlineHelpText>
    <label>RAHD_Project Parent ID</label>
    <referenceTo>PBS_gBUILD_Project__c</referenceTo>
    <relationshipLabel>gBUILD Workflow History</relationshipLabel>
    <relationshipName>gBUILD_Project_to_Workflow</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>