force-app/main/default/objects/PBS_gBUILD_WorkflowHistory__c/fields/StateNameCurrent__c.field-meta.xml
<CustomField>
    <fullName>StateNameCurrent__c</fullName>
    <description>The name of the current state.</description>
    <inlineHelpText>The name of the current state.</inlineHelpText>
    <label>Current Workflow Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>