force-app/main/default/objects/PBS_gBUILD_WorkflowHistory__c/fields/StateNamePrevious__c.field-meta.xml
<CustomField>
    <fullName>StateNamePrevious__c</fullName>
    <description>The name of the previous state.</description>
    <inlineHelpText>The name of the previous state.</inlineHelpText>
    <label>Previous Workflow Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>