force-app/main/default/objects/PBS_gBUILD_WorkflowHistory__c/recordTypes/FormSignoff.recordType-meta.xml
<RecordType>
    <fullName>FormSignoff</fullName>
    <active>true</active>
    <label>Form Signoff</label>
</RecordType>