force-app/main/default/objects/PBS_gBUILD_WorkflowHistory__c/recordTypes/LastModifiedReason.recordType-meta.xml
<RecordType>
    <fullName>LastModifiedReason</fullName>
    <active>true</active>
    <label>Last Modified Reason</label>
</RecordType>