force-app/main/default/objects/PBS_gBUILD_WorkflowHistory__c/recordTypes/WorkflowStateTransition.recordType-meta.xml
<RecordType>
    <fullName>WorkflowStateTransition</fullName>
    <active>true</active>
    <label>Workflow State Transition</label>
</RecordType>