force-app/main/default/objects/PBS_gBUILD_WorkflowHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>StateNameCurrent__c</columns>
    <columns>ParentScopeSystemDetail__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>